--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Asus PC\\\\Documents\\\\GitHub\\\\MediMind'"
+       "'d:\\\\MedAccessAI\\\\research'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3661,7 +3661,7 @@
     "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "\n",
     "# Define index name\n",
-    "index_name = \"medimind\"\n",
+    "index_name = \"industrial\"\n",
     "\n",
     "# # Create the index\n",
     "# pc.create_index(\n",
@@ -4012,7 +4012,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MediMind",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -4026,7 +4026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
